--- a/RestaurantTinder/RestaurantTinder/RestaurantTinder.csproj
+++ b/RestaurantTinder/RestaurantTinder/RestaurantTinder.csproj
@@ -5,11 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="System">
       <HintPath>System</HintPath>
     </Reference>
     <Reference Include="System.Data">
       <HintPath>System.Data</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SqlClient">
+      <HintPath>..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\system.data.sqlclient\4.5.1\ref\netcoreapp2.1\System.Data.SqlClient.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml">
       <HintPath>System.Xml</HintPath>
