--- a/RestaurantTinder/RestTinderWebAPI/appsettings.json
+++ b/RestaurantTinder/RestTinderWebAPI/appsettings.json
@@ -4,5 +4,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\sqlexpress;Initial Catalog=RestaurantTinder;Integrated Security=True"
+  }
