--- a/RestaurantTinder/Vue/restaurant-tinder/package.json
+++ b/RestaurantTinder/Vue/restaurant-tinder/package.json
@@ -10,8 +10,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.18",
     "core-js": "^2.6.5",
-    "vue": "^2.6.6"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
