--- a/RestaurantTinder/RestTinderWebAPI/appsettings.json
+++ b/RestaurantTinder/RestTinderWebAPI/appsettings.json
@@ -4,9 +4,10 @@
       "Default": "Warning"
     }
   },
+  "JwtSecret": "TechElevatorCodingBootamp",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\sqlexpress;Initial Catalog=RestaurantTinder;Integrated Security=True"
-    }
   }
 }
+
